<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityForAddStudents"
    android:background="#00BCD4">


    <EditText
        android:id="@+id/addName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/student_name"/>

    <EditText
        android:id="@+id/addNumberOfPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="phone"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addName"
        android:layout_marginTop="60dp"
        android:hint="@string/student_phone_number"/>

    <EditText
        android:id="@+id/addGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addNumberOfPhone"
        android:layout_marginTop="60dp"
        android:hint="@string/student_group"
        android:inputType="phone"/>

    <Button
        android:id="@+id/saveStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/addGroup"
        app:layout_constraintRight_toRightOf="@id/addGroup"
        android:layout_margin="10dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>