<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="#FFC107"
    android:orientation="vertical">

    <TextView
        android:id="@+id/vh_student_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/example_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vh_student_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_numberPhone"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@id/vh_student_full_name"
        app:layout_constraintTop_toBottomOf="@id/vh_student_full_name" />


    <TextView
        android:id="@+id/vh_student_group"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#FF9800"
        android:paddingTop="5dp"
        android:text="@string/example_group"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>